--- a/data/template.html
+++ b/data/template.html
@@ -102,7 +102,7 @@
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
   </div>
 
-  <!-- <textarea class="emscripten" id="output" rows="8"></textarea> -->
+  <textarea class="emscripten" id="output" rows="8"></textarea>
 
   <script type='text/javascript'>
     var statusElement = document.getElementById('status');
